# mod_voicechanger

./: .gitignore  CMakeLists.txt  README.md
linear/: linear.h  stft.h
linear/platform/: linear-accelerate.h
linear/signalsmith-linear/: stft.h
linear/tests/: test-stfts.h
src/: CMakeLists.txt  FindFreeswitch.cmake  mod_voicechanger.cpp
src/signalsmith-stretch/: signalsmith-stretch.h
src/signalsmith-stretch/__MACOSX/: ._signalsmith-stretch.h
src/signalsmith-stretch/__MACOSX/plugin/: ._stop-denormals.h  ._stretch-vocal.h
src/signalsmith-stretch/plugin/: stop-denormals.h  stretch-vocal.h
